exteriordd/static/css/style.css
/* ... */
#footer .social-links a:hover {
  background: #e73f3f;
  color: #fff;
  text-decoration: none;
}

#footer .anchor-button {
  background: none!important;
  border: none;
  padding: 0!important;
  color: rgba(255, 255, 255, 0.6);
  transition: 0.3s;
  display: inline-block;
  line-height: 1;
}

#footer .footer-top .footer-links ul button:hover {
  text-decoration: none;
  color: #fff;
}

.btn-primary {
  color: white;
  background-color: #e73f3f;
  border-color: #e73f3f;
}   

.btn-primary:hover {
  background-color: #ff0000;
  border-color: #ff0000;
}   


.comm-services .service-img {
  width: 100%;
  height: auto;
  min-height: 200px;
}

.comm-services ul {
  list-style: none;
  padding: 0;
}

.comm-services ul li {
  padding: 10px 0 0 28px;
  position: relative;
  font-size: 12px;
}

.comm-services ul i {
  left: 0;
  top: 7px;
  position: absolute;
  font-size: 20px;
  color: #e73f3f;
}

@media (max-width:500px) {
  .comm-services .no-mobile {
    display:none!important;
  } 
}
@media (min-width:501px) {
  .comm-services .mobile-only {
    display: none!important;
  }
}

.parallax {

  /* Set a specific height */
  height: auto;

  /* Create the parallax scrolling effect */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

